charts/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cast-service
spec:
  type: ClusterIP
  selector:
    app: cast-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: movie-service
spec:
  type: ClusterIP
  selector:
    app: movie-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
