charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
        - path: /api/v1/casts/
          pathType: Prefix
          backend:
             service:
              name: cast-service
              port:
                number: 8000
        - path: /api/v1/movies/
          pathType: Prefix
          backend:
             service:
              name: movie-service
              port:
                number: 8000
